[package]
name = "mzpeaks"
version = "1.0.1"
edition = "2021"
keywords = [
    'mass-spectrometry',
]

categories = []

description = "A library representing peaks in mass spectrometry data"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzpeaks"
documentation = "https://docs.rs/mzpeaks"

exclude = ["test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mzpeaks"

[features]
serde-support = ["serde", ]

[dependencies]
num-traits = "0.2"
serde = {version="1.0.130", features=["derive"], optional=true}

[dev-dependencies]
serde = {version="1.0.130", features=["derive"]}
serde_json = {version = "1.0.59"}

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "doc/katex.html",
]
