[package]
name = "mzpeaks"
version = "1.0.8"
edition = "2021"
keywords = [
    'mass-spectrometry',
]

categories = []

description = "A library representing peaks in mass spectrometry data"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzpeaks"
documentation = "https://docs.rs/mzpeaks"

exclude = ["test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mzpeaks"

[features]

serde-support = ["serde", ]
serde = ["dep:serde", "dep:serde-big-array"]
rayon = ["dep:rayon"]

[dependencies]
num-traits = "0.2"
rayon = { version = "1", optional = true }
serde = {version="1.0.130", features=["derive"], optional=true}
serde-big-array = { version = "0.5.1", optional = true }

[dev-dependencies]
serde = {version="1.0.130", features=["derive"]}
serde_json = {version = "1.0.59"}

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "doc/katex.html",
]
